Refactor core components, DTOs, mappers, and repositories; update unit tests and remove application.properties